# hermes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: merge.yaml  pull-request.yaml
docker/: Dockerfile
hermes/: __init__.py  commands.py  config.py  extensions.py  filter.py  models.py  routes.py  schemas.py
hermes/static/: main.js
hermes/templates/: index.html
radio_browser/: __init__.py  commands.py  config.py  enum.py  filter.py  models.py  routes.py  schemas.py
radio_browser/static/: style.css
tests/: conftest.py  test_commands.py  test_enum.py  test_factory.py  test_filter.py  test_models.py  test_routes.py  test_schemas.py
tests/test_commands/: arlb006.txt  arrl.json  hfak.txt  hfgulf.txt  hfhi.txt  hfmarsh.txt  hfreyes.txt  wefax.json
